--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -16,9 +16,20 @@ env:
   REPO_BRANCH: master
 
 on:
-  workflow_dispatch:
+#  workflow_dispatch:
 #  schedule:
 #    - cron: 0 */18 * * *
+#以下是我添加的
+  repository_dispatch:
+  workflow_dispatch:
+    inputs:
+      ssh:
+        description: 'SSH connection to Actions'
+        required: false
+        default: 'false'
+#以上是我添加的
+permissions:
+  contents: read
 
 jobs:
   check:
