--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -111,7 +111,7 @@ jobs:
           # ===============================================================
           # 
         sed -i 's/^[ \t]*//g' ./.config
-        make defconfig      
+       # make defconfig      
 
     - name: Load custom configuration
       run: |
