--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -111,7 +111,8 @@ jobs:
           # ===============================================================
           # 
         sed -i 's/^[ \t]*//g' ./.config
-       # make defconfig      
+        cd openwrt
+        make defconfig      
 
     - name: Load custom configuration
       run: |
