--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -109,6 +109,7 @@ jobs:
         CONFIG_PACKAGE_luci-app-mwan3helper=y
         CONFIG_PACKAGE_luci-app-openclash=y
         
+#passwall        
         CONFIG_PACKAGE_luci-app-passwall=y
         CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
@@ -120,17 +121,24 @@ jobs:
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
-        
+#passwall2       
         CONFIG_PACKAGE_luci-app-passwall2=y
         CONFIG_PACKAGE_luci-app-passwall2_Transparent_Proxy=y
         CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Shadowsocks_Libev_Client=y
         CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_ShadowsocksR_Libev_Client=y
         CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Simple_Obfs=y
         CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_V2ray_Plugin=y
-        
+
+#SSR-plus        
         CONFIG_PACKAGE_luci-app-ssr-plus=y
         CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
         CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
         
         
         CONFIG_DEFAULT_luci-proto-bonding=y
