--- a/.github/workflows/By_lovezanky.yml
+++ b/.github/workflows/By_lovezanky.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build myOpenWrt
+name: Build MyOpenWrt 
 
 on:
   repository_dispatch:
@@ -53,26 +53,166 @@ jobs:
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
-
     - name: Clone source code
       working-directory: /workdir
       run: |
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
-
     - name: Load custom feeds
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
         chmod +x $DIY_P1_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
-
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
 
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
+      
+ #     
+ Check failure on line 77 in .github/workflows/By-lovezanky.yml
+
+GitHub Actions
+/ .github/workflows/By-lovezanky.yml
+Invalid workflow file
+You have an error in your yaml syntax on line 77
+    - name: Generate configuration file
+      run: |
+        rm -f ./.config*
+        touch ./.config
+          #
+          # 在 cat >> .config <<EOF 到 EOF 之间粘贴你的编译配置, 需注意缩进关系
+          # 例如:
+        cat >> .config <<EOF
+        CONFIG_TARGET_IMAGES_GZIP=y
+        CONFIG_KERNEL_BUILD_USER="OpenWrt-CI"
+        CONFIG_KERNEL_BUILD_DOMAIN="Azure"
+        CONFIG_DEFAULT_luci-app-accesscontrol=y
+#       CONFIG_DEFAULT_luci-app-adbyby-plus=y
+        CONFIG_DEFAULT_luci-app-arpbind=y
+        CONFIG_DEFAULT_luci-app-autoreboot=y
+        CONFIG_DEFAULT_luci-app-cpufreq=y
+        CONFIG_DEFAULT_luci-app-ddns=y
+        CONFIG_DEFAULT_luci-app-filetransfer=y
+        CONFIG_DEFAULT_luci-app-ipsec-vpnd=y
+        CONFIG_DEFAULT_luci-app-nlbwmon=y
+        CONFIG_DEFAULT_luci-app-ramfree=y
+        CONFIG_DEFAULT_luci-app-sfe=y
+        CONFIG_DEFAULT_luci-app-ssr-plus=y
+        CONFIG_DEFAULT_luci-app-unblockmusic=y
+        CONFIG_DEFAULT_luci-app-upnp=y
+        CONFIG_DEFAULT_luci-app-vlmcsd=y
+        CONFIG_DEFAULT_luci-app-vsftpd=y
+        CONFIG_DEFAULT_luci-app-webadmin=y
+        CONFIG_DEFAULT_luci-app-wol=y
+        CONFIG_DEFAULT_luci-app-xlnetacc=y
+        CONFIG_DEFAULT_luci-app-zerotier=y
+        CONFIG_PACKAGE_luci-app-mwan3=y
+        CONFIG_PACKAGE_luci-app-mwan3helper=y
+        CONFIG_PACKAGE_luci-app-openclash=y
+        CONFIG_DEFAULT_luci-app-diskman=y
+        CONFIG_DEFAULT_luci-app-ttyd=y
+        CONFIG_DEFAULT_luci-app-turboacc=y
+        CONFIG_DEFAULT_luci-app-wireguard=y
+        CONFIG_DEFAULT_luci-newapi=y
+        CONFIG_DEFAULT_luci-proto-bonding=y
+
+# Root filesystem images
+#
+# CONFIG_TARGET_ROOTFS_EXT4FS is not set
+#CONFIG_TARGET_ROOTFS_SQUASHFS=y
+#CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=1024
+#CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
+#CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
+# CONFIG_GRUB_IMAGES is not set
+#CONFIG_GRUB_EFI_IMAGES=y
+#CONFIG_GRUB_CONSOLE=y
+#CONFIG_GRUB_SERIAL="ttyS0"
+#CONFIG_GRUB_BAUDRATE=115200
+# CONFIG_GRUB_FLOWCONTROL is not set
+#CONFIG_GRUB_BOOTOPTS=""
+#CONFIG_GRUB_TIMEOUT="0"
+#CONFIG_GRUB_TITLE="OpenWrt"
+# CONFIG_ISO_IMAGES is not set
+# CONFIG_QCOW2_IMAGES is not set
+# CONFIG_VDI_IMAGES is not set
+# CONFIG_VMDK_IMAGES is not set
+CONFIG_VHDX_IMAGES=y
+#CONFIG_TARGET_IMAGES_GZIP=y
+
+#passwall        
+        CONFIG_PACKAGE_luci-app-passwall=y
+        CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
+        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
+        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
+        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
+        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
+        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
+        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
+        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
+        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
+        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+#passwall2       
+        CONFIG_PACKAGE_luci-app-passwall2=y
+        CONFIG_PACKAGE_luci-app-passwall2_Transparent_Proxy=y
+        CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Shadowsocks_Libev_Client=y
+        CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_ShadowsocksR_Libev_Client=y
+        CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Simple_Obfs=y
+        CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_V2ray_Plugin=y
+
+#SSR-plus        
+        CONFIG_PACKAGE_luci-app-ssr-plus=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
+        
+#多拨       
+        CONFIG_PACKAGE_luci-app-syncdial=y
+
+#Turbo ACC 网络加速设置
+        CONFIG_PACKAGE_luci-app-turboacc=y
+        CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_CM=y
+        CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
+        CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_PDNSD=y
+
+#网易云音乐
+        CONFIG_PACKAGE_luci-app-unblockmusic=y
+        CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go=y
+
+#KMS服务器，用于激活Windows操作系统
+        CONFIG_PACKAGE_luci-app-vlmcsd=y
+
+# 4. Themes
+#
+# CONFIG_PACKAGE_luci-theme-argon is not set
+# CONFIG_PACKAGE_luci-theme-argon-mod is not set
+# CONFIG_PACKAGE_luci-theme-argonne is not set
+# CONFIG_PACKAGE_luci-theme-atmaterial_new is not set
+CONFIG_PACKAGE_luci-theme-bootstrap=y
+# CONFIG_PACKAGE_luci-theme-design is not set
+CONFIG_PACKAGE_luci-theme-ifit=y
+CONFIG_PACKAGE_luci-theme-material=y
+# CONFIG_PACKAGE_luci-theme-netgear is not set
+CONFIG_PACKAGE_luci-theme-opentopd=y
+CONFIG_PACKAGE_luci-theme-tomato=y
+# end of 4. Themes
+
+
+        CONFIG_DEFAULT_luci-proto-bonding=y
+        EOF
+          #
+          # ===============================================================
+          # 
+        sed -i 's/^[ \t]*//g' ./.config
+        cd openwrt
+        make defconfig      
 
     - name: Load custom configuration
       run: |
@@ -81,7 +221,6 @@ jobs:
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
-
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
@@ -97,7 +236,6 @@ jobs:
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
-
     - name: Compile the firmware
       id: compile
       run: |
@@ -108,7 +246,6 @@ jobs:
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
-
     - name: Check space usage
       if: (!cancelled())
       run: df -hT
@@ -128,7 +265,6 @@ jobs:
         rm -rf packages
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "::set-output name=status::success"
-
     - name: Upload firmware directory
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
@@ -144,7 +280,6 @@ jobs:
         ./transfer cow --block 2621440 -s -p 64 --no-progress ${FIRMWARE} 2>&1 | tee cowtransfer.log
         echo "::warning file=cowtransfer.com::$(cat cowtransfer.log | grep https)"
         echo "::set-output name=url::$(cat cowtransfer.log | grep https | cut -f3 -d" ")"
-
     - name: Upload firmware to WeTransfer
       id: wetransfer
       if: steps.organize.outputs.status == 'success' && env.UPLOAD_WETRANSFER == 'true' && !cancelled()
@@ -153,7 +288,6 @@ jobs:
         ./transfer wet -s -p 16 --no-progress ${FIRMWARE} 2>&1 | tee wetransfer.log
         echo "::warning file=wetransfer.com::$(cat wetransfer.log | grep https)"
         echo "::set-output name=url::$(cat wetransfer.log | grep https | cut -f3 -d" ")"
-
     - name: Generate release tag
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
@@ -163,7 +297,6 @@ jobs:
         [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "::set-output name=status::success"
-
     - name: Upload firmware to release
       uses: softprops/action-gh-release@v1
       if: steps.tag.outputs.status == 'success' && !cancelled()
