--- a/.github/workflows/By_lovezanky.yml
+++ b/.github/workflows/By_lovezanky.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build OpenWrt 
+name: Build myOpenWrt 
 
 on:
   repository_dispatch:
@@ -116,27 +116,27 @@ jobs:
 # Root filesystem images
 #
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
-#CONFIG_TARGET_ROOTFS_SQUASHFS=y
-#CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=1024
-#CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
-#CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
+# CONFIG_TARGET_ROOTFS_SQUASHFS=y
+# CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=1024
+# CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
+# CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
 # CONFIG_GRUB_IMAGES is not set
-#CONFIG_GRUB_EFI_IMAGES=y
-#CONFIG_GRUB_CONSOLE=y
-#CONFIG_GRUB_SERIAL="ttyS0"
-#CONFIG_GRUB_BAUDRATE=115200
+# CONFIG_GRUB_EFI_IMAGES=y
+# CONFIG_GRUB_CONSOLE=y
+# CONFIG_GRUB_SERIAL="ttyS0"
+# CONFIG_GRUB_BAUDRATE=115200
 # CONFIG_GRUB_FLOWCONTROL is not set
-#CONFIG_GRUB_BOOTOPTS=""
-#CONFIG_GRUB_TIMEOUT="0"
-#CONFIG_GRUB_TITLE="OpenWrt"
+# CONFIG_GRUB_BOOTOPTS=""
+# CONFIG_GRUB_TIMEOUT="0"
+# CONFIG_GRUB_TITLE="OpenWrt"
 # CONFIG_ISO_IMAGES is not set
 # CONFIG_QCOW2_IMAGES is not set
 # CONFIG_VDI_IMAGES is not set
 # CONFIG_VMDK_IMAGES is not set
 CONFIG_VHDX_IMAGES=y
-#CONFIG_TARGET_IMAGES_GZIP=y
+# CONFIG_TARGET_IMAGES_GZIP=y
 
-#passwall        
+# passwall        
         CONFIG_PACKAGE_luci-app-passwall=y
         CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
@@ -148,7 +148,7 @@ CONFIG_VHDX_IMAGES=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
-#passwall2       
+# passwall2       
         CONFIG_PACKAGE_luci-app-passwall2=y
         CONFIG_PACKAGE_luci-app-passwall2_Transparent_Proxy=y
         CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Shadowsocks_Libev_Client=y
@@ -156,7 +156,7 @@ CONFIG_VHDX_IMAGES=y
         CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Simple_Obfs=y
         CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_V2ray_Plugin=y
 
-#SSR-plus        
+# SSR-plus        
         CONFIG_PACKAGE_luci-app-ssr-plus=y
         CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
         CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
@@ -167,20 +167,20 @@ CONFIG_VHDX_IMAGES=y
         CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client=y
         CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
         
-#多拨       
+# 多拨       
         CONFIG_PACKAGE_luci-app-syncdial=y
 
-#Turbo ACC 网络加速设置
+# Turbo ACC 网络加速设置
         CONFIG_PACKAGE_luci-app-turboacc=y
         CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_CM=y
         CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
         CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_PDNSD=y
 
-#网易云音乐
+# 网易云音乐
         CONFIG_PACKAGE_luci-app-unblockmusic=y
         CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go=y
 
-#KMS服务器，用于激活Windows操作系统
+# KMS服务器，用于激活Windows操作系统
         CONFIG_PACKAGE_luci-app-vlmcsd=y
 
 # 4. Themes
