--- a/.github/workflows/By_lovezanky.yml
+++ b/.github/workflows/By_lovezanky.yml
@@ -138,7 +138,7 @@ jobs:
         # CONFIG_GRUB_BOOTOPTS=""
         # CONFIG_GRUB_TIMEOUT="0"
         # CONFIG_GRUB_TITLE="OpenWrt"
-        CONFIG_ISO_IMAGES is not set
+        CONFIG_ISO_IMAGES=y
         # CONFIG_QCOW2_IMAGES is not set
         # CONFIG_VDI_IMAGES is not set
         CONFIG_VMDK_IMAGES=y
